# Solar_Finder_Switzerland

./: .gitignore  README.md  crop_and_clean_image.py  detect_solar_panels.py  export_leads_csv.py  export_to_excel.py  feature_guided_sam3.py  geoadmin_explorer.py  get_building_screenshot.py  get_building_wms_overlay.py  pyproject.toml  region_building_groups.py  requirements.txt  retry_llm.py  run_pipeline.py
streamlit_site/: app.py
