[project]
name = "solar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "google-genai",
    "openai",
    "ultralytics",
    "huggingface-hub",
    "streamlit",
    "scipy",
    "tqdm",
    "ollama",
    "scikit-learn",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
    "einops",
    "pycocotools",
    "opencv-python",
    "pillow",
    "decord",
    "psutil",
    "setuptools",
    "openpyxl>=3.1.5",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "setuptools>=82.0.0",
]
